tests/snapshots/validator_snapshots__validator_all@validator-49.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/lexer/unterminated_string_returns_error.of
---
LexerError(
    "unterminated string literal",
)
