tests/snapshots/validator_snapshots__validator_all@validator-5.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/language/05_if_block_expressions.of
---
ValidationErrors(
    [
        "module 'test_module' imports unknown module 'of:core'",
        "unknown variable 'print' in function 'test_module::main'",
        "unknown variable 'print' in function 'test_module::main'",
        "unknown variable 'print' in function 'test_module::main'",
    ],
)
