tests/snapshots/validator_snapshots__validator_all@validator-50.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/lexer/whitespace_only_returns_eof.of
---
Ok
