tests/snapshots/validator_snapshots__validator_all@validator-52.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/networking/01_tcp_echo_server.of
---
ValidationErrors(
    [
        "invalid operator 'Add' for operand of type 'string' in function 'test_module::main'",
        "invalid operator 'Add' for operand of type 'string' in function 'test_module::main'",
        "invalid operator 'Add' for operand of type 'string' in function 'test_module::main'",
        "invalid operator 'Add' for operand of type 'string' in function 'test_module::main'",
        "type mismatch in function 'test_module::main' (binary Add): expected 'string', found 'null'",
        "type mismatch in function 'test_module::main' (binary Add): expected 'string', found 'null'",
        "type mismatch in function 'test_module::main' (binary Add): expected 'string', found 'null'",
        "type mismatch in function 'test_module::main' (binary Add): expected 'string', found 'null'",
        "module 'test_module' imports unknown module 'of:core'",
        "module 'test_module' imports unknown module 'of_io'",
        "unknown member 'accept' on 'null' in function 'test_module::main'",
        "unknown member 'bind' on 'null' in function 'test_module::main'",
        "unknown member 'buf' on 'null' in function 'test_module::main'",
        "unknown member 'close' on 'null' in function 'test_module::main'",
        "unknown member 'close' on 'null' in function 'test_module::main'",
        "unknown member 'close' on 'null' in function 'test_module::main'",
        "unknown member 'free' on 'null' in function 'test_module::main'",
        "unknown member 'len' on 'null' in function 'test_module::main'",
        "unknown member 'len' on 'null' in function 'test_module::main'",
        "unknown member 'message' on 'null' in function 'test_module::main'",
        "unknown member 'message' on 'null' in function 'test_module::main'",
        "unknown member 'message' on 'null' in function 'test_module::main'",
        "unknown member 'message' on 'null' in function 'test_module::main'",
        "unknown member 'read' on 'null' in function 'test_module::main'",
        "unknown member 'write' on 'null' in function 'test_module::main'",
        "unknown type 'IoError' in module 'test_module'",
        "unknown type 'IoError' in module 'test_module'",
        "unknown type 'IoError' in module 'test_module'",
        "unknown type 'IoError' in module 'test_module'",
        "unknown type 'IoError' in module 'test_module'",
        "unknown type 'IoError' in module 'test_module'",
        "unknown type 'IoError' in module 'test_module'",
        "unknown type 'IoError' in module 'test_module'",
        "unknown type 'ReadResult' in module 'test_module'",
        "unknown type 'TcpListener' in module 'test_module'",
        "unknown type 'TcpStream' in module 'test_module'",
        "unknown variable 'TcpListener' in function 'test_module::main'",
        "unknown variable 'println' in function 'test_module::main'",
        "unknown variable 'println' in function 'test_module::main'",
        "unknown variable 'println' in function 'test_module::main'",
        "unknown variable 'println' in function 'test_module::main'",
        "unknown variable 'println' in function 'test_module::main'",
        "unknown variable 'println' in function 'test_module::main'",
        "unknown variable 'println' in function 'test_module::main'",
    ],
)
