tests/snapshots/validator_snapshots__validator_all@validator-54.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/networking/03_nonblocking_select.of
---
ValidationErrors(
    [
        "invalid operator 'Add' for operand of type 'null' in function 'test_module::main'",
        "invalid operator 'Add' for operand of type 'string' in function 'test_module::main'",
        "invalid operator 'Add' for operand of type 'string' in function 'test_module::main'",
        "invalid operator 'Add' for operand of type 'string' in function 'test_module::main'",
        "invalid operator 'Add' for operand of type 'string' in function 'test_module::main'",
        "type mismatch in function 'test_module::main' (binary Add): expected 'null', found 'int64'",
        "type mismatch in function 'test_module::main' (binary Add): expected 'string', found 'null'",
        "type mismatch in function 'test_module::main' (binary Add): expected 'string', found 'null'",
        "type mismatch in function 'test_module::main' (binary Add): expected 'string', found 'null'",
        "type mismatch in function 'test_module::main' (binary Add): expected 'string', found 'null'",
        "type mismatch in function 'test_module::main' (if condition): expected 'bool', found 'null'",
        "module 'test_module' imports unknown module 'of:core'",
        "module 'test_module' imports unknown module 'of_io'",
        "unknown member 'accept' on 'null' in function 'test_module::main'",
        "unknown member 'add' on 'null' in function 'test_module::main'",
        "unknown member 'bind' on 'null' in function 'test_module::main'",
        "unknown member 'close' on 'null' in function 'test_module::main'",
        "unknown member 'close' on 'null' in function 'test_module::main'",
        "unknown member 'close' on 'null' in function 'test_module::main'",
        "unknown member 'fd' on 'null' in function 'test_module::main'",
        "unknown member 'fd' on 'null' in function 'test_module::main'",
        "unknown member 'fd' on 'null' in function 'test_module::main'",
        "unknown member 'fd' on 'null' in function 'test_module::main'",
        "unknown member 'free' on 'null' in function 'test_module::main'",
        "unknown member 'isset' on 'null' in function 'test_module::main'",
        "unknown member 'message' on 'null' in function 'test_module::main'",
        "unknown member 'message' on 'null' in function 'test_module::main'",
        "unknown member 'message' on 'null' in function 'test_module::main'",
        "unknown member 'message' on 'null' in function 'test_module::main'",
        "unknown member 'new' on 'null' in function 'test_module::main'",
        "unknown member 'set_nonblocking' on 'null' in function 'test_module::main'",
        "unknown type 'IoError' in module 'test_module'",
        "unknown type 'IoError' in module 'test_module'",
        "unknown type 'IoError' in module 'test_module'",
        "unknown type 'IoError' in module 'test_module'",
        "unknown type 'IoError' in module 'test_module'",
        "unknown type 'IoError' in module 'test_module'",
        "unknown type 'IoError' in module 'test_module'",
        "unknown type 'IoError' in module 'test_module'",
        "unknown type 'TcpListener' in module 'test_module'",
        "unknown type 'TcpStream' in module 'test_module'",
        "unknown variable 'FdSet' in function 'test_module::main'",
        "unknown variable 'TcpListener' in function 'test_module::main'",
        "unknown variable 'println' in function 'test_module::main'",
        "unknown variable 'println' in function 'test_module::main'",
        "unknown variable 'println' in function 'test_module::main'",
        "unknown variable 'println' in function 'test_module::main'",
        "unknown variable 'println' in function 'test_module::main'",
        "unknown variable 'println' in function 'test_module::main'",
        "unknown variable 'println' in function 'test_module::main'",
        "unknown variable 'select' in function 'test_module::main'",
    ],
)
