tests/snapshots/validator_snapshots__validator_all@validator-56.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/networking/05_multi_message_client.of
---
ValidationErrors(
    [
        "invalid operator 'Add' for operand of type 'string' in function 'test_module::main'",
        "invalid operator 'Add' for operand of type 'string' in function 'test_module::send_and_recv'",
        "invalid operator 'Add' for operand of type 'string' in function 'test_module::send_and_recv'",
        "type mismatch in function 'test_module::main' (binary Add): expected 'string', found 'null'",
        "type mismatch in function 'test_module::send_and_recv' (binary Add): expected 'string', found 'null'",
        "type mismatch in function 'test_module::send_and_recv' (binary Add): expected 'string', found 'null'",
        "module 'test_module' imports unknown module 'of:core'",
        "module 'test_module' imports unknown module 'of_io'",
        "unknown member 'close' on 'null' in function 'test_module::main'",
        "unknown member 'connect' on 'null' in function 'test_module::main'",
        "unknown member 'message' on 'null' in function 'test_module::main'",
        "unknown member 'buf' on 'null' in function 'test_module::send_and_recv'",
        "unknown member 'free' on 'null' in function 'test_module::send_and_recv'",
        "unknown member 'len' on 'null' in function 'test_module::send_and_recv'",
        "unknown member 'len' on 'null' in function 'test_module::send_and_recv'",
        "unknown member 'message' on 'null' in function 'test_module::send_and_recv'",
        "unknown member 'message' on 'null' in function 'test_module::send_and_recv'",
        "unknown member 'read' on 'null' in function 'test_module::send_and_recv'",
        "unknown member 'write_str' on 'null' in function 'test_module::send_and_recv'",
        "unknown type 'IoError' in module 'test_module'",
        "unknown type 'IoError' in module 'test_module'",
        "unknown type 'IoError' in module 'test_module'",
        "unknown type 'IoError' in module 'test_module'",
        "unknown type 'IoError' in module 'test_module'",
        "unknown type 'IoError' in module 'test_module'",
        "unknown type 'ReadResult' in module 'test_module'",
        "unknown type 'TcpStream' in module 'test_module'",
        "unknown type 'TcpStream' in module 'test_module'",
        "unknown variable 'TcpStream' in function 'test_module::main'",
        "unknown variable 'println' in function 'test_module::main'",
        "unknown variable 'println' in function 'test_module::main'",
        "unknown variable 'println' in function 'test_module::main'",
        "unknown variable 'print' in function 'test_module::send_and_recv'",
        "unknown variable 'println' in function 'test_module::send_and_recv'",
        "unknown variable 'println' in function 'test_module::send_and_recv'",
        "unknown variable 'println' in function 'test_module::send_and_recv'",
        "unknown variable 'write' in function 'test_module::send_and_recv'",
    ],
)
