tests/snapshots/validator_snapshots__validator_all@validator-57.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/networking/of_io.of
---
ValidationErrors(
    [
        "type mismatch in function 'test_module::TcpStream::write_str' (call to __of_write arg 2): expected 'uint64', found 'null'",
        "module 'test_module' imports unknown module 'of:core'",
        "module 'test_module' imports unknown module 'of:core'",
        "unknown member 'size' on 'null' in function 'test_module::TcpStream::write_str'",
        "unknown type 'Buffer' in module 'test_module'",
        "unknown type 'Buffer' in module 'test_module'",
        "unknown type 'Buffer' in module 'test_module'",
        "unknown type 'Buffer' in module 'test_module'",
        "unknown type 'Buffer' in module 'test_module'",
        "unknown type 'Buffer' in module 'test_module'",
        "unknown type 'Buffer' in module 'test_module'",
        "unknown type 'Buffer' in module 'test_module'",
        "unknown type 'Buffer' in module 'test_module'",
        "unknown type 'Buffer' in module 'test_module'",
        "unknown type 'Buffer' in module 'test_module'",
        "unknown type 'Buffer' in module 'test_module'",
        "unknown type 'Buffer' in module 'test_module'",
        "unknown type 'Buffer' in module 'test_module'",
        "unknown type 'Buffer' in module 'test_module'",
        "unknown type 'Buffer' in module 'test_module'",
        "unknown type 'Buffer' in module 'test_module'",
        "unknown type 'Buffer' in module 'test_module'",
        "unknown type 'Buffer' in module 'test_module'",
        "unknown type 'Buffer' in module 'test_module'",
        "unknown type 'Buffer' in module 'test_module'",
        "unknown type 'Buffer' in module 'test_module'",
        "unknown type 'Buffer' in module 'test_module'",
        "unknown type 'Buffer' in module 'test_module'",
        "unknown type 'Buffer' in module 'test_module'",
        "unknown type 'Buffer' in module 'test_module'",
        "unknown type 'Buffer' in module 'test_module'",
        "unknown type 'Buffer' in module 'test_module'",
        "unknown type 'Buffer' in module 'test_module'",
        "unknown type 'Buffer' in module 'test_module'",
        "unknown type 'Buffer' in module 'test_module'",
        "unknown type 'Buffer' in module 'test_module'",
        "unknown variable '__of_buffer_free' in function 'test_module::FdSet::free'",
        "unknown variable '__of_buffer_free' in function 'test_module::ReadResult::free'",
        "unknown variable '__of_buffer_free' in function 'test_module::TcpListener::bind'",
        "unknown variable '__of_buffer_free' in function 'test_module::TcpStream::connect'",
        "unknown variable '__of_buffer_alloc' in function 'test_module::TcpStream::read'",
        "unknown variable '__of_buffer_free' in function 'test_module::TcpStream::read'",
        "unknown variable '__of_buffer_free' in function 'test_module::TcpStream::write_str'",
        "unknown variable '__of_buffer_free' in function 'test_module::select'",
    ],
)
