tests/snapshots/validator_snapshots__validator_all@validator-58.snap
---
source: tests/validator_snapshots.rs
assertion_line: 51
expression: result
input_file: examples/networking/web_server/hello.of
---
ValidationErrors(
    [
        "invalid operator 'Add' for operand of type 'null' in function 'test_module::main'",
        "invalid operator 'Add' for operand of type 'null' in function 'test_module::main'",
        "invalid operator 'Add' for operand of type 'string' in function 'test_module::main'",
        "invalid operator 'Add' for operand of type 'string' in function 'test_module::main'",
        "invalid operator 'Add' for operand of type 'string' in function 'test_module::main'",
        "invalid operator 'Add' for operand of type 'string' in function 'test_module::main'",
        "type mismatch in function 'test_module::handle' (binary Eq): expected 'null', found 'string'",
        "type mismatch in function 'test_module::handle' (binary Eq): expected 'null', found 'string'",
        "type mismatch in function 'test_module::handle' (binary Eq): expected 'null', found 'string'",
        "type mismatch in function 'test_module::handle' (binary Eq): expected 'null', found 'string'",
        "type mismatch in function 'test_module::handle' (binary Eq): expected 'null', found 'string'",
        "type mismatch in function 'test_module::main' (binary Add): expected 'null', found 'string'",
        "type mismatch in function 'test_module::main' (binary Add): expected 'string', found 'null'",
        "type mismatch in function 'test_module::main' (binary Add): expected 'string', found 'null'",
        "type mismatch in function 'test_module::main' (binary Add): expected 'string', found 'null'",
        "type mismatch in function 'test_module::main' (binary Add): expected 'string', found 'null'",
        "module 'test_module' imports unknown module 'of:core'",
        "module 'test_module' imports unknown module 'of_io'",
        "module 'test_module' imports unknown module 'web_server'",
        "unknown member 'body' on 'null' in function 'test_module::handle'",
        "unknown member 'html' on 'null' in function 'test_module::handle'",
        "unknown member 'method' on 'null' in function 'test_module::handle'",
        "unknown member 'method' on 'null' in function 'test_module::handle'",
        "unknown member 'not_found' on 'null' in function 'test_module::handle'",
        "unknown member 'path' on 'null' in function 'test_module::handle'",
        "unknown member 'path' on 'null' in function 'test_module::handle'",
        "unknown member 'path' on 'null' in function 'test_module::handle'",
        "unknown member 'text' on 'null' in function 'test_module::handle'",
        "unknown member 'text' on 'null' in function 'test_module::handle'",
        "unknown member 'accept' on 'null' in function 'test_module::main'",
        "unknown member 'bad_request' on 'null' in function 'test_module::main'",
        "unknown member 'bind' on 'null' in function 'test_module::main'",
        "unknown member 'close' on 'null' in function 'test_module::main'",
        "unknown member 'close' on 'null' in function 'test_module::main'",
        "unknown member 'close' on 'null' in function 'test_module::main'",
        "unknown member 'message' on 'null' in function 'test_module::main'",
        "unknown member 'message' on 'null' in function 'test_module::main'",
        "unknown member 'message' on 'null' in function 'test_module::main'",
        "unknown member 'message' on 'null' in function 'test_module::main'",
        "unknown member 'method' on 'null' in function 'test_module::main'",
        "unknown member 'path' on 'null' in function 'test_module::main'",
        "unknown member 'read_request' on 'null' in function 'test_module::main'",
        "unknown member 'write_response' on 'null' in function 'test_module::main'",
        "unknown member 'write_response' on 'null' in function 'test_module::main'",
        "unknown type 'Connection' in module 'test_module'",
        "unknown type 'IoError' in module 'test_module'",
        "unknown type 'IoError' in module 'test_module'",
        "unknown type 'IoError' in module 'test_module'",
        "unknown type 'IoError' in module 'test_module'",
        "unknown type 'IoError' in module 'test_module'",
        "unknown type 'IoError' in module 'test_module'",
        "unknown type 'IoError' in module 'test_module'",
        "unknown type 'IoError' in module 'test_module'",
        "unknown type 'Request' in module 'test_module'",
        "unknown type 'Request' in module 'test_module'",
        "unknown type 'Response' in module 'test_module'",
        "unknown type 'Server' in module 'test_module'",
        "unknown variable 'Response' in function 'test_module::handle'",
        "unknown variable 'Response' in function 'test_module::handle'",
        "unknown variable 'Response' in function 'test_module::handle'",
        "unknown variable 'Response' in function 'test_module::handle'",
        "unknown variable 'Response' in function 'test_module::main'",
        "unknown variable 'Server' in function 'test_module::main'",
        "unknown variable 'println' in function 'test_module::main'",
        "unknown variable 'println' in function 'test_module::main'",
        "unknown variable 'println' in function 'test_module::main'",
        "unknown variable 'println' in function 'test_module::main'",
        "unknown variable 'println' in function 'test_module::main'",
        "unknown variable 'println' in function 'test_module::main'",
    ],
)
