tests/snapshots/validator_snapshots__validator_all@validator-59.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/parser/parse_expr_binary_mixed.of
---
ValidationErrors(
    [
        "invalid operator 'Add' for operand of type 'null' in function 'test_module::test'",
        "invalid operator 'Div' for operand of type 'null' in function 'test_module::test'",
        "unknown variable 'x' in function 'test_module::test'",
        "unknown variable 'y' in function 'test_module::test'",
        "unknown variable 'z' in function 'test_module::test'",
    ],
)
