tests/snapshots/validator_snapshots__validator_all@validator-6.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/language/06_unions.of
---
ParserError(
    "unexpected token 'if'",
)
